# Python-DataSciense

./: .gitignore  README.md  go-it-python-datascience-hw-1.ipynb  pyproject.toml
ds_jupyter_hw/: Hw1.ipynb  Hw10_1.ipynb  Hw10_2.ipynb  Hw12.ipynb  Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  Hw3.ipynb  Hw4.ipynb  Hw5.ipynb  Hw6.ipynb  Hw7.ipynb  Hw8_tensorflow_mnist_hw.ipynb  Hw9.ipynb  Hw_11.ipynb  description.csv
ds_jupyter_hw/dont_chek/lection_3/: 2023-06-13-1.ipynb
ds_jupyter_hw/dont_chek/lection_4/: 2023-06-15-1.ipynb  2023-06-21-1.ipynb
ds_jupyter_hw/dont_chek/lection_5/: 2023_06_27_1.ipynb  2023_06_29_1.ipynb
ds_jupyter_hw/dont_chek/lection_6/: 2024-07-07_1.ipynb  2024-07-07_2.ipynb
ds_jupyter_hw/dont_chek/lection_7/: 2023-07-20_1.ipynb  2023-07-20_2.ipynb
ds_jupyter_hw/dont_chek/lection_8/: 2023-07-27_1.ipynb
ds_jupyter_hw/dont_chek/lection_9/: 2023-08-03-1.ipynb  main.py
ds_jupyter_hw/dont_chek/lection_additional/: 2023_07_10_1.ipynb  2023_07_10_2.ipynb  main.py
ds_jupyter_hw/homework_5/data_preprocesing/: df_idle.csv  df_stairs.csv
