[tool.poetry]
name = "ds-jupyter-hw"
version = "0.1.0"
description = ""
authors = ["Vladislav <109065019+TimVladislav13010@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ds_jupyter_hw"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
notebook = "^6.5.4"
pyreadline = "^2.1"
pandas = "^2.0.2"
lxml = "^4.9.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
